@@ -4,9 +4,10 @@ import itertools
 
 from Acquisition import aq_base
 from plone.app.workflow.browser.sharing import merge_search_results
-from zope.component import adapts
+from zope.component import adapts, queryUtility
 from zope.component.hooks import getSite
 from zope.interface import implements
+from plone.uuid.interfaces import IUUIDGenerator
 from Products.CMFCore.interfaces import ISiteRoot
 from Products.CMFCore.utils import getToolByName
 from Products.PlonePAS.interfaces.plugins import ILocalRolesPlugin
@@ -19,6 +20,13 @@ from collective.teamwork.utils import request_for
 from interfaces import ISiteMembers, IGroups
 from utils import authenticated_user
 import pas
+
+try:
+    from plone.app.users.browser.interfaces import IUserIdGenerator
+    HAS_IDGEN = True
+except ImportError:
+    IUserIdGenerator = None
+    HAS_IDGEN = False
 
 
 MAILCONF = ('smtp_host', 'email_from_address')
@@ -187,22 +195,36 @@ class SiteMembers(object):
         should trigger the usual registration process: a user
         should receive an email to complete setup.
         """
-        email = username
-        fullname = kwargs.get('fullname', email)  # fall-back to email
+        username = self._uf.applyTransform(username)
+        fullname = kwargs.get('fullname', username)
         VALID_EMAIL = re.compile('[A-Za-z0-9_+\-]+@[A-Za-z0-9_+\-]+')
-        if not VALID_EMAIL.search(username):
-            email = kwargs.get('email', None)
+        fallback_email = username if VALID_EMAIL.search(username) else None
+        email = kwargs.get('email', fallback_email)
         if username in self:
             raise KeyError('Duplicate username: %s in use' % username)
         rtool = self._reg_tool()
         pw = rtool.generatePassword()     # random temporary password
         props = {'email': email, 'username': username, 'fullname': fullname}
-        rtool.addMember(username, pw, properties=props)
+        userid = self._generate_userid(props)
+        rtool.addMember(userid, pw, properties=props)
+        if userid != username:
+            self._uf.updateLoginName(userid, username)
         if send:
             if email is None:
                 raise KeyError('email not provided, but send specified')
-            rtool.registeredNotify(email)
+            rtool.registeredNotify(userid)
         self.refresh()
+
+    def _generate_userid(self, data):
+        username = data.get('username')
+        if HAS_IDGEN:
+            generator = queryUtility(IUserIdGenerator)
+            if generator is not None:
+                return generator(data)
+        props = getToolByName(self.portal, 'portal_properties')
+        if props.site_properties.getProperty('use_uuid_as_userid'):
+            return queryUtility(IUUIDGenerator)()
+        return username
 
     def __delitem__(self, username):
         """
